--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,4 +17,8 @@ eureka:
 management:
   endpoints:
     web:
-      expose: "*"
+      exposure:
+        include:  "*"
+  endpoint:
+    bus-refresh:
+      enabled: true
