--- a/order-prod.yml
+++ b/order-prod.yml
@@ -4,8 +4,8 @@ spring:
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
     username: root
-    password: 123456
-    url: jdbc:mysql://192.168.31.225:3306/sell?characterEncoding=utf-8&useSSL=false
+    password: raspberry
+    url: jdbc:mysql://192.168.31.138:3306/sell?characterEncoding=utf-8&useSSL=false
   jpa:
     show-sql: true
 server:
