--- a/product-dev.yml
+++ b/product-dev.yml
@@ -4,7 +4,7 @@ spring:
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
     username: root
-    password: 123456
+    password: Android1.
     url: jdbc:mysql://120.46.136.163:3306/sell?characterEncoding=utf-8&useSSL=false
   jpa:
     show-sql: true
