--- a/product-dev.yml
+++ b/product-dev.yml
@@ -8,6 +8,15 @@ spring:
     url: jdbc:mysql://120.46.136.163:3306/sell?characterEncoding=utf-8&useSSL=false
   jpa:
     show-sql: true
+  rabbitmq:
+    host: 120.46.136.163
+    port: 5672
+    username: admin
+    password: admin
+  redis:
+    host: 120.46.136.163
+    port: 6379
+
 server:
   port: 8081
 eureka:
